# gh_copilot_chat

./: .env.example  README.md  pyproject.toml
.github/workflows/: package.yml  publish.yml  tag.yml
gh_copilot_chat/: __init__.py  constants.py  copilot.py  main.py
gh_copilot_sdk/: __init__.py  copilot.py  main.py
