[tool.poetry]
name = "gh-copilot-sdk"
version = "0.1.0"
description = ""
authors = ["Mohammed Rabil <rabil@techie.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
copilot = "gh_copilot_sdk.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
