[tool.poetry]
name = "gh_copilot_chat"
version = "2024.05.11.0505"
description = "API Wrapper for GitHub Copilot Chat"
authors = ["Mohammed Rabil <rabil@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
copilot = "gh_copilot_sdk.main:main"
cp = "gh_copilot_sdk.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
